--- a/style/style.css
+++ b/style/style.css
@@ -123,6 +123,7 @@ aside {
 #import-participants-distribution {
     border: 1px solid #444;
     padding: 6px;
+    /* font-size: .9em; */
 }
 
 #reset-players-list:hover,
@@ -159,7 +160,7 @@ aside {
 #aside-tables-container .remaining-seats td,
 #aside-tables-container .uih-groups th,
 #aside-tables-container .uih-groups td {
-    padding: 4px 12px;
+    padding: 4px 10px;
     text-align: center;
     font-size: .75rem;
 }
