--- a/style/style.css
+++ b/style/style.css
@@ -54,7 +54,6 @@ button:hover {
 caption {
     margin-bottom: 2px;
     text-align: l;
-    font-size: .9em;
 }
 
 /* table {
@@ -84,9 +83,8 @@ aside {
     display: block;
     color: #000;
     /* padding: 7px 16px; */
+    padding: 8px 16px;
     text-decoration: none;
-    padding: 6px 12px;
-    font-size: .9em;
 }
 
 #nav-container ul li a.active {
@@ -109,7 +107,6 @@ aside {
     margin-top: 8px;
     gap: .5rem;
 }
-
 /* #other-stuff-container {
     display: grid;
     width: 100px;
@@ -123,8 +120,7 @@ aside {
 #undo-reset-players-list,
 #import-participants-distribution {
     border: 1px solid #444;
-    padding: 6px;
-    /* font-size: .9em; */
+    padding: 8px;
 }
 
 #reset-players-list:hover,
@@ -150,20 +146,11 @@ aside {
     flex-direction: column;
     align-items: center;
     /* gap: 2vh; */
-    gap: 2vh;
+    gap: 3vh;
     padding: 1vh 0;
     position: absolute;
     bottom: 12px;
     width: 100%;
-}
-
-#aside-tables-container .remaining-seats th,
-#aside-tables-container .remaining-seats td,
-#aside-tables-container .uih-groups th,
-#aside-tables-container .uih-groups td {
-    padding: 4px 10px;
-    text-align: center;
-    font-size: .75rem;
 }
 
 /* same as .players */
@@ -343,6 +330,12 @@ td button.player-name {
 .participants {
     box-shadow: var(--table-shadow);
     cursor: default;
+
+    /* fadeIn part */
+    /* -webkit-animation: fadeIn 1.2;
+    -moz-animation: fadeIn 1.2;
+    -o-animation: fadeIn 1.2;
+    animation: fadeIn 1.2; */
 }
 
 /* odd rows 1, 3, 5, 7, ... */
@@ -442,133 +435,6 @@ td button.player-name {
     color: var(--color-inactive);
 }
 
-/* MEDIA QUERRY */
-@media screen and (max-width: 1120px) {
-    #main {
-        width: 100%;
-    }
-
-    .players th,
-    .players td {
-        min-width: 10px;
-    }
-
-    .players th {
-        padding: 10px 6px;
-    }
-
-    .players button {
-        padding: 10px 4px;
-    }
-
-    /* participants */
-    .participants-container {
-        flex-direction: column;
-    }
-
-    .participants th,
-    .participants td {
-        text-align: center;
-        min-width: 0px;
-    }
-}
-
-@media screen and (max-width: 992px) {
-    body {
-        /* flex-direction: column; */
-        position: relative;
-    }
-
-    #website-header {
-        width: 100%;
-        /* width: 100vw; */
-        height: 35px;
-        background-color: var(--aside-bg-color);
-        position: absolute;
-        top: 0;
-        left: 0;
-
-        display: flex;
-        align-items: center;
-    }
-
-    #website-header span {
-        padding: 0 30px;
-        /* background-color: pink; */
-        font-weight: bold;
-        display: inline-block;
-        height: 100%;
-        line-height: 36px;
-        cursor: pointer;
-        background-color: rgba(0, 0, 0, .075);
-    }
-    #website-header span:hover {
-        background-color: var(--nav-hover-bg);
-    color: var(--nav-hover-color);
-    }
-
-
-    #veil {
-        position: absolute;
-        left: 0;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        background-color: rgba(0, 0, 0, .5);
-        display: none;
-    }
-
-    #aside {
-        position: fixed;
-        display: none;
-    }
-
-    #main {
-        width: 100%;
-        margin-left: 0;
-    }
-
-    .players th,
-    .players td {
-        min-width: 10px;
-    }
-
-    .players th {
-        padding: 10px 6px;
-    }
-
-    .players button {
-        padding: 10px 4px;
-        /* width: 100%; */
-    }
-
-    /* participants */
-    .participants-container {
-        /* display: flex; */
-        flex-direction: column;
-        /* gap: 2rem; */
-        /* align-items: baseline; */
-    }
-
-    .participants th,
-    .participants td {
-        text-align: center;
-        min-width: 0px;
-        /* padding: 4px 14px; */
-    }
-}
-
-@media screen and (max-width: 710px) {
-    .players {
-        width: 100%;
-
-    }
-    .players button {
-        padding: 10px 0;
-        width: 100%;
-    }
-}
-
 /** fade-in **/
 @keyframes fade-in {
     from {
@@ -579,13 +445,11 @@ td button.player-name {
         opacity: 1;
     }
 }
-
 /** fade-in-2 **/
 @keyframes fade-in-2 {
     0% {
         opacity: 1;
     }
-
     50% {
         opacity: 0;
     }
